<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Silly Android Project</string>
    <string name="labelText">words go here</string>
    <string name="magentaRedText">Magenta Red</string>
    <string name="blackText">Black</string>
    <string name="songText">doo waa diddy dumm</string>
    <string name="uglyGreenText">Ugly Green</string>
    <string name="whiteText">White</string>
    <string name="prettyPurpleText">Pretty Purple</string>
    <string name="bubblyBlueText">Bubbly Blue</string>
    <string name="appealingOrangeText">Appealing Orange</string>
    <string name="lemonYellowText">Lemon Yellow</string>
    <string name="seaFoamGreenText">Seafoam Green</string>
    <string name="bloodRedText">Blood Red</string>
    <string name="pastelPinkText">Pastel Pink</string>
    <string name="indigoBlueText">Indigo Blue</string>

</resources>
