<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magentaRed"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/magentaRedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sillyTextView"
        android:layout_alignBottom="@+id/sillyTextView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:text="@string/magentaRedText" />

    <Button
        android:id="@+id/blackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/magentaRedButton"
        android:layout_below="@+id/magentaRedButton"
        android:layout_marginTop="18dp"
        android:text="@string/blackText" />

    <Button
        android:id="@+id/indigoBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/blackButton"
        android:layout_below="@+id/blackButton"
        android:layout_marginTop="14dp"
        android:text="@string/indigoBlueText" />

    <TextView
        android:id="@+id/sillyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/songText"
        android:textColor="@color/uglyGreen" />

    <Button
        android:id="@+id/appealingOrangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/indigoBlueButton"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/blackButton"
        android:text="@string/appealingOrangeText" />

    <Button
        android:id="@+id/bloodRedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/indigoBlueButton"
        android:layout_alignBottom="@+id/indigoBlueButton"
        android:layout_toRightOf="@+id/magentaRedButton"
        android:text="@string/bloodRedText" />

    <Button
        android:id="@+id/bubblyBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bloodRedButton"
        android:layout_alignBottom="@+id/bloodRedButton"
        android:layout_toRightOf="@+id/appealingOrangeButton"
        android:text="@string/bubblyBlueText" />

    <Button
        android:id="@+id/lemonYellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/indigoBlueButton"
        android:layout_below="@+id/indigoBlueButton"
        android:layout_marginTop="14dp"
        android:text="@string/lemonYellowText" />

    <Button
        android:id="@+id/pastelPinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lemonYellowButton"
        android:layout_alignBottom="@+id/lemonYellowButton"
        android:layout_toLeftOf="@+id/bubblyBlueButton"
        android:text="@string/pastelPinkText" />

    <Button
        android:id="@+id/prettyPurpleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pastelPinkButton"
        android:layout_alignBottom="@+id/pastelPinkButton"
        android:layout_alignLeft="@+id/bubblyBlueButton"
        android:text="@string/prettyPurpleText" />

    <Button
        android:id="@+id/seaFoamGreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/appealingOrangeButton"
        android:layout_alignBottom="@+id/appealingOrangeButton"
        android:layout_alignLeft="@+id/bubblyBlueButton"
        android:text="@string/seaFoamGreenText" />

    <Button
        android:id="@+id/uglyGreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/magentaRedButton"
        android:layout_alignBottom="@+id/magentaRedButton"
        android:layout_toRightOf="@+id/lemonYellowButton"
        android:text="@string/uglyGreenText" />

    <Button
        android:id="@+id/whiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bubblyBlueButton"
        android:layout_alignBottom="@+id/bubblyBlueButton"
        android:layout_toRightOf="@+id/prettyPurpleButton"
        android:text="@string/whiteText" />

</RelativeLayout>
